--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ plugins {
   id 'java-library'
 }
 
+sourceCompatibility = JavaVersion.VERSION_1_9
+targetCompatibility = JavaVersion.VERSION_1_9
+
 repositories {
   jcenter()
   maven {
