--- a/build.gradle
+++ b/build.gradle
@@ -7,19 +7,17 @@ targetCompatibility = JavaVersion.VERSION_1_9
 
 repositories {
   jcenter()
-  maven {
-    url 'https://jitpack.io'
-  }
 }
 
 dependencies {
   api 'com.google.guava:guava:24.1-jre'
   api 'org.eclipse.jdt:org.eclipse.jdt.annotation:2.1.100'
-  testImplementation 'com.github.junit-team.junit5-samples:junit5-mockito-extension:e9b64bd'
   testImplementation 'javax.inject:javax.inject:1'
   testImplementation 'nl.jqno.equalsverifier:equalsverifier:2.4.5'
   testImplementation 'org.hamcrest:hamcrest-junit:2.0.0.0'
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.1.0'
+  testImplementation 'org.mockito:mockito-core:2.17.0'
+  testImplementation 'org.mockito:mockito-junit-jupiter:2.17.0'
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.1.0'
 }
